[gd_scene load_steps=27 format=3 uid="uid://cqot7l40xy826"]

[ext_resource type="Texture2D" uid="uid://d1s0ar2nvr07k" path="res://tiles/Cute_Fantasy_Free/Cute_Fantasy_Free/Enemies/Slime.png" id="1_evl4h"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_xansr"]
[ext_resource type="Texture2D" uid="uid://b8r0xq0t0xrm7" path="res://tiles/kenney_1-bit-input-prompts-pixel-16/Tiles (White)/tile_0087.png" id="3_ejeij"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1er0"]
atlas = ExtResource("1_evl4h")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w114r"]
atlas = ExtResource("1_evl4h")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se484"]
atlas = ExtResource("1_evl4h")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcylu"]
atlas = ExtResource("1_evl4h")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkp1x"]
atlas = ExtResource("1_evl4h")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ehf8"]
atlas = ExtResource("1_evl4h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icqfb"]
atlas = ExtResource("1_evl4h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlf7y"]
atlas = ExtResource("1_evl4h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrsdd"]
atlas = ExtResource("1_evl4h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_782fl"]
atlas = ExtResource("1_evl4h")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10m0y"]
atlas = ExtResource("1_evl4h")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04wwp"]
atlas = ExtResource("1_evl4h")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tit8"]
atlas = ExtResource("1_evl4h")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg18p"]
atlas = ExtResource("1_evl4h")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ui2"]
atlas = ExtResource("1_evl4h")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_slnyu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1er0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w114r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcylu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkp1x")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ehf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icqfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlf7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrsdd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_782fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04wwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tit8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg18p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5ui2")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rymne"]
radius = 78.4092

[sub_resource type="CircleShape2D" id="CircleShape2D_tlhb5"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fmfee"]
radius = 13.0384

[sub_resource type="Animation" id="Animation_je5ca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("e_popup:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.232129]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("letter:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.86, 1.86)]
}

[sub_resource type="Animation" id="Animation_3h34a"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("letter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.86, 1.86), Vector2(2, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q8u3n"]
resource_name = "e_wiggle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("e_popup:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.232129, 0.232129]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjdb1"]
_data = {
"RESET": SubResource("Animation_je5ca"),
"die": SubResource("Animation_3h34a"),
"e_wiggle": SubResource("Animation_q8u3n")
}

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_xansr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6.54)
sprite_frames = SubResource("SpriteFrames_slnyu")
animation = &"idle"
frame_progress = 0.296148

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_rymne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_tlhb5")

[node name="hitbox_enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_enemy"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_fmfee")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.466778, 0.960261, 0.448455, 1)
offset_left = -4.0
offset_top = 3.0
offset_right = 82.0
offset_bottom = 24.0
scale = Vector2(0.14, 0.14)
max_value = 60.0
show_percentage = false

[node name="letter" type="Sprite2D" parent="."]
position = Vector2(1.22, -5.045)
scale = Vector2(1.86, 1.86)

[node name="e_popup" type="Sprite2D" parent="."]
visible = false
z_index = 10
position = Vector2(0, -20)
rotation = -0.232129
scale = Vector2(0.435, 0.435)
texture = ExtResource("3_ejeij")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjdb1")
}
autoplay = "e_wiggle"

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="hitbox_enemy" to="." method="_on_hitbox_enemy_area_entered"]
[connection signal="area_exited" from="hitbox_enemy" to="." method="_on_hitbox_enemy_area_exited"]
[connection signal="body_exited" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
